@@ -483,7 +483,8 @@ the tracker that we've stopped participating in the swarm. The optional second a
 ``options`` can be used to delete all the files downloaded by this torrent. To do this, pass
 in the value ``session::delete_files``. The removal of the torrent is asyncronous, there is
 no guarantee that adding the same torrent immediately after it was removed will not throw
-a libtorrent_exception_ exception.
+a libtorrent_exception_ exception. Once the torrent is deleted, a torrent_deleted_alert_
+is posted.
 
 find_torrent() get_torrents()
 -----------------------------
@@ -5545,6 +5546,27 @@ The ``error_code`` tells you why it failed.
 	{
 		// ...
 		error_code error;
+	};
+
+torrent_deleted_alert
+---------------------
+
+This alert is generated when a request to delete the files of a torrent complete.
+
+The ``info_hash`` is the info-hash of the torrent that was just deleted. Most of
+the time the torrent_handle in the torrent_alert_ will be invalid by the time
+this alert arrives, since the torrent is being deleted. The ``info_hash`` member
+is hence the main way of identifying which torrent just completed the delete.
+
+This alert is posted in the ``storage_notification`` category, and that bit
+needs to be set in the alert mask.
+
+::
+
+	struct torrent_deleted_alert: torrent_alert
+	{
+		// ...
+		sha1_hash info_hash;
 	};
 
 torrent_finished_alert
